Fixed back to top button alignment

--- a/css/style.css
+++ b/css/style.css
@@ -349,7 +349,7 @@ div#Accesiblity-mode a svg {
 
 /* Back to Top */
 .go-to-top {
-    margin-top: 20px;
+    margin-top: 17px;
     transition: 0.5s;
 }
 .go-to-top:hover {
